--- a/codechella/src/index.css
+++ b/codechella/src/index.css
@@ -1,3 +1,8 @@
+:root {
+   --cor-primaria-verao: #2E7BA2;
+   --cor-secundaria-verao: #DF9010; 
+}
+
 body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
